# ci-cd

./: main.py  pyproject.toml
.github/workflows/: main.yaml
src/: app.py
