[project]
name = "otus-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black==24.8.0",
    "ipykernel==6.29.5",
    "isort==5.13.2",
    "loguru==0.7.2",
    "matplotlib==3.9.2",
    "pylint==3.2.6",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.12.5",
    "scikit-learn==1.3.2",
    "seaborn==0.13.2",
    "streamlit==1.38.0",
]
